--- a/assets/scss/components/_scroll-to-top.scss
+++ b/assets/scss/components/_scroll-to-top.scss
@@ -9,6 +9,7 @@
   position: fixed;
   right: calc(((100vw - 76.8rem)/2) + #{$space-small});
   width: #{($space-medium + $space-small) / 2};
+  z-index: 500;
 
   &.focus {
     opacity: 1;
